# Kinectv2_object_detection_CGA_and_EA_pcl_freenect2

./: CMakeLists.txt  LICENSE  README.md  test.cpp
include/: k2g.h
src/: objects.h  objects_body.cpp  ransac.h  ransac_body.cpp  test.cpp
